# demo-actory-hop-weights

./: .gitignore  DSPY_AGENT_README.md  DSPY_INTEGRATION_README.md  INTELLIGENT_NAVIGATION_README.md  OPTIMIZED_ROUTE_FINDER_README.md  README.md  analyze.py  analyze_all_pages.py  analyze_neighbors.py  benchmark_speed.py  clear_db.py  discover_urls.py  docker-compose.yml  intelligent_navigation_planner.py  main.py  pyproject.toml  requirements.txt  test_combined_system.py  test_dspy_agent.py  test_dspy_enhanced.py  test_end_to_end.py  test_intelligent_navigation.py  test_optimized_routes.py  test_weight_based_routes.py
actory_ai_scrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scraper/: crawl_agent.py  dspy_enhanced_route_finder.py  enhanced_run.py  extractors.py  llm_extractor.py  neo4j_client.py  optimized_route_finder.py  plan.py  planningagent.py  run.py  simple_run.py  smart_planning_agent.py  ultra_fast_planning_agent.py  weight_based_optimized_finder.py  weight_based_route_finder.py
tests/: test_comprehensive_extraction.py  test_extractors.py  test_neo4j.py
