[project]
name = "actory-ai-scrape"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai==0.7.3",
    "neo4j==5.28.2",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "python-dotenv==1.1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
actory-crawl = "scraper.run:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

